--- a/style.css
+++ b/style.css
@@ -1,14 +1,8 @@
 
-/*
-Design by TEMPLATED
-http://templated.co
-Released for free under the Creative Commons Attribution License
-*/
-
 body {
 	margin: 0;
 	padding: 0;
-	background: #000000 url(https://giphy.com/gifs/the-matrix-Y0cKnGMCBTNTi/tile) repeat;
+	background: #000000 url(https://media.giphy.com/media/rWY9ySfjytitq/giphy.gif) repeat;
 	font-family: 'Abel', sans-serif;
 	font-size: 18px;
 	color: #5B5B5B;
@@ -54,7 +48,8 @@ a:hover {
 #wrapper {
 	overflow: hidden;
 	padding: 0px 0px 30px 0px;
-	background: #121212 url(images/img01.jpg) repeat;
+	background-image: url('https://media.giphy.com/media/rWY9ySfjytitq/giphy.gif');
+    background-size: cover;
 }
 
 .container {
